完善存款逻辑、格式化balance